# api-sample

./: .gitignore  CHANGELOG.md  README.md
python/: .env.example  Dockerfile  Makefile  Makefile.help  README.MD  docker-compose.yml  pyproject.toml
python/api/: WalletConvertFunds.py  WalletTransferFunds.py  WalletqueryWalletHistory.py  earn_buy_product.py  earn_get_history.py  earn_get_orders.py  earn_get_products.py  earn_redeem_product.py  earn_renew_product.py  futures_amend_order.py  futures_cancel_all_after.py  futures_cancel_order.py  futures_change_settlement_currency.py  futures_charting_data.py  futures_close_position.py  futures_create_new_algo_order.py  futures_get_market_summary.py  futures_get_open_orders.py  futures_get_orderbook.py  futures_get_orderbook_L2.py  futures_get_trades.py  futures_place_limit_order.py  futures_place_market_order.py  futures_place_oco_order.py  futures_place_reduce_only_order.py  futures_query_account_fees.py  futures_query_market_price.py  futures_query_position.py  futures_query_trades_fills.py  futures_query_wallet_balance.py  futures_query_wallet_history.py  futures_query_wallet_margin.py  futures_set_leverage.py  futures_set_risk_limits.py  futures_transfer_funds_between_futures_wallet.py  futures_ws_authentication.py  futures_ws_get_all_position.py  futures_ws_get_orderbook_depth.py  futures_ws_get_orderbook_group.py  futures_ws_get_oss_delta.py  (+54 more)
python/futures/: btseauth_futures.py  delete_order.py  limit_order.py  market_order.py  open_orders.py  open_positions.py  orderbook.py  wallet.py
python/spot/: async-example.py  (+10 more)
(+231 files in other folders)
